# deskdazzle

./: .env.example  .firebaserc  .gitignore  FIREBASE.md  IMPLEMENTATION_PLAN.md  README.md  SUGGESTIONS.md  database.rules.json  firebase.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache
.github/workflows/: ci.yml
core/: Cargo.toml
core/pkg/: package.json  pocketknife_core.d.ts  pocketknife_core.js  pocketknife_core_bg.wasm  pocketknife_core_bg.wasm.d.ts
core/src/: bindings.rs  convert.rs  dates.rs  lib.rs  model.rs  nlp.rs  search.rs  views.rs
office/: Cargo.toml
office/pkg/: office_core.d.ts  office_core.js  office_core_bg.wasm  office_core_bg.wasm.d.ts  package.json
office/src/: bindings.rs  bundle.rs  csv_io.rs  excel.rs  lib.rs  model.rs  pdf.rs  pdfops.rs  pptx.rs  word.rs
public/: index.html  manifest.json
src/: App.css  App.js  App.jsx  auth.js  desktop.css  firebaseConfig.js  index.css  index.js  index.jsx  setupTests.js  style.css  tools.css  toolsData.js  ui.css
src/apps/budget/: BudgetApp.jsx
src/apps/calculator/: CalculatorApp.jsx
src/components/: AppBadge.jsx  CommandPalette.jsx  ConsentBanner.jsx  DesktopWindow.jsx  EditProfileDialog.jsx  EntityMigration.jsx  ErrorBoundary.jsx  FileHandler.jsx  Footer.js  Footer.jsx  Header.js  Header.jsx  PwaUpdatePrompt.jsx  SettingsRuntime.jsx  ShortcutTip.jsx  Shortcuts.jsx  SidebarShell.jsx  Splash.jsx  ToolPage.jsx  WelcomeTour.jsx  WorkspaceManager.jsx
src/hooks/: useDesktopLayout.js  useLocalStorage.js  useUserData.js
src/lib/: analytics.js  analyticsConsent.js  backup.js  backup.test.js  blobStore.js  broadcast.ts  converter-client.ts  core.worker.ts  fetchJson.js  fetchJson.test.js  id.js  image-shared.ts  image.ts  logger.js  notesSanitize.js  notesSanitize.test.js  office.ts  openWith.js  pdfjs.js  sidebarShortcut.js  taskNlp.js  taskNlp.test.js  types.ts  wasm.ts  worker-protocol.ts  zip.ts
src/pages/: Apps.jsx  BatchImageConverter.jsx  Blog.js  BudgetTracker.jsx  Calculator.js  Calculator.jsx  Calender.js  Calender.jsx  Clock.jsx  ColorPicker.js  ColorPicker.jsx  Converters.jsx  CurrencyConverter.js  CurrencyConverter.jsx  DataConverter.jsx  Design.jsx  Desktop.jsx  Docs.jsx  Donate.js  Donate.jsx  Drive.jsx  Flashcards.jsx  GradientGenerator.jsx  Home.jsx  ImageOptimizer.jsx  ImageResizer.jsx  Images.jsx  MarkdownPreviewer.js  MarkdownPreviewer.jsx  NoteTaking.jsx  PasswordGenerator.js  PasswordGenerator.jsx  PdfTools.jsx  Privacy.jsx  Profile.js  Profile.jsx  QRCodeGenerator.js  QRCodeGenerator.jsx  RecipeFinder.jsx  Roadmap.jsx  (+18 more)
src/widgets/: AlarmsWidget.jsx  BudgetWidget.jsx  CalculatorWidget.jsx  CalendarWidget.jsx  ClockWidget.jsx  ColorWidget.jsx  FocusWidget.jsx  MediaWidget.jsx  NotesWidget.jsx  StopwatchWidget.jsx  TimersWidget.jsx  TodoWidget.jsx  WeatherWidget.jsx  WorldClockWidget.jsx
(+110 files in other folders)
