[package]
name = "pocketknife-core"
version = "0.1.0"
edition = "2021"
description = "PocketKnife core logic: tasks, scheduling, search, conversions. Targets wasm (web) and wasm32-wasip1 (headless)."
license = "MIT"

[lib]
# cdylib -> wasm/wasi artifact, rlib -> usable from a future native CLI/tests.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enabled by wasm-pack for the browser build. Left OFF for the WASI compile-check
# so the pure logic is verified without wasm-bindgen.
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
base64 = "0.22"
# Calendar math only — no clock/tz (unavailable on wasm/wasi).
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
opt-level = "s"   # optimize for size — keep the wasm bundle lean
lto = true
codegen-units = 1
panic = "abort"
